fix(circle): fix collapsing of circle wall

--- a/src/views/ArticleDetail/styles.css
+++ b/src/views/ArticleDetail/styles.css
@@ -78,7 +78,3 @@
     color: var(--color-grey);
   }
 }
-
-.content-outline {
-  position: relative;
-}
